2002-04-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* irc.man: Added doctools manpage.

2002-02-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* irc.tcl: Frink run.

	* irc: Version is now 0.2 to distinguish this from the code in
	  tcllib release 1.2

2001-11-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* irc.n:
	* irc.tcl: Applied patch #481477.